[+] Refactoring 3