@@ -5,8 +5,8 @@ package org.clematis.math.v1.functions;
 
 import org.clematis.math.v1.AlgorithmException;
 import org.clematis.math.v1.Constant;
+import org.clematis.math.v1.IExpressionItem;
 import org.clematis.math.v1.algorithm.AlgorithmUtils;
-import org.clematis.math.v1.iExpressionItem;
 
 /**
  * int ( x )
@@ -17,13 +17,13 @@ public class Int extends aFunction2 {
      *
      * @return expression item instance
      */
-    public iExpressionItem calculate() throws AlgorithmException {
+    public IExpressionItem calculate() throws AlgorithmException {
         try {
             if (arguments.size() != 1) {
                 throw new AlgorithmException("Invalid number of arguments in function 'int': " + arguments.size());
             }
 
-            iExpressionItem a1 = arguments.get(0).calculate();
+            IExpressionItem a1 = arguments.get(0).calculate();
             if (!AlgorithmUtils.isGoodNumericArgument(a1)) {
                 Int retvalue = new Int();
                 retvalue.setSignature("Int");
@@ -33,11 +33,10 @@ public class Int extends aFunction2 {
             }
 
             Constant c1 = AlgorithmUtils.getNumericArgument(a1);
-            return new Constant(new Double(c1.getNumber() * getMultiplier()).intValue());
+            return new Constant(Double.valueOf(c1.getNumber() * getMultiplier()).intValue());
         } catch (AlgorithmException ex) {
             throw ex;
         } catch (Exception ex) {
-            ex.printStackTrace();
             throw new AlgorithmException("Failed calculation in " + signature + " due to " + ex);
         }
     }
